# evmone-compiler

./: 1  README.md  circle.yml  out.txt
lib/: CMakeLists.txt
lib/compiler/: CMakeLists.txt  README.md  aot_baseline_instruction_table.hpp  aot_compiler.hpp  aot_eof.cpp  aot_execution_state.hpp  aot_instructions.hpp  aot_instructions_calls.cpp  aot_instructions_storage.cpp  aot_instructions_traits.hpp  aot_instructions_xmacro.hpp  aot_intx.hpp  compiler.cpp
lib/compiler/benchmark/: CMakeLists.txt  Cycles.cpp  Cycles.hpp  interpreter.cpp
lib/compiler/benchmark/fib/: CMakeLists.txt  compiler_config.json  fib.cpp  fibonacci.sol
lib/compiler/benchmark/snailtracer/: CMakeLists.txt  snailtracer.cpp
lib/compiler/scripts/: mkamal.sh
lib/evmone/: CMakeLists.txt  baseline.cpp  baseline.hpp  caterpillar.cpp  caterpillar_instructions.cpp  caterpillar_instructions.hpp  eof.cpp  eof.hpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_traits.hpp  instructions_xmacro.hpp
lib/evmone_precompiles/: bn254.cpp
test/: CMakeLists.txt
test/bench/: bench.cpp  synthetic_benchmarks.cpp
test/blockchaintest/: CMakeLists.txt  blockchaintest.cpp  blockchaintest.hpp  blockchaintest_loader.cpp  blockchaintest_runner.cpp
test/fuzzer/: CMakeLists.txt
test/internal_benchmarks/: CMakeLists.txt
test/state/: CMakeLists.txt  account.hpp  errors.hpp  host.cpp  host.hpp  mpt.cpp  precompiles_stub.json  state.cpp  state.hpp
test/statetest/: statetest.cpp  statetest.hpp  statetest_loader.cpp  statetest_runner.cpp
test/t8n/: t8n.cpp
test/unittests/: CMakeLists.txt  blockchaintest_loader_test.cpp  eof_validation_test.cpp  evm_eof_rjump_test.cpp  evm_eof_test.cpp  instructions_test.cpp  state_rlp_test.cpp  state_transition.cpp  state_transition_blob_tx_test.cpp  state_transition_create_test.cpp  state_tx_test.cpp
test/utils/: bytecode.hpp
